Archive2/c4/163145233522cf/output
main.cpp: In function 'int main()':
main.cpp:12:44: error: could not convert 'ns::tagged_variant<main()::blue>{}' from 'ns::tagged_variant<main()::blue>' to 'ns::tagged_variant<ns::blue>'
     test(ns::tagged_variant<struct blue> {});
                                            ^
