Archive2/c4/163145233522cf/main.cpp
namespace ns {

template<typename... Tags> struct tagged_variant {};

void test(tagged_variant<struct blue>)
{}

} // ns

int main()
{
    test(ns::tagged_variant<struct blue> {});
}